--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="message">Message</string>
     <string name="send_message">Send Message</string>
     <string name="messages">Messages</string>
+    <string name="user">User</string>
+    <string name="logout">Logout</string>
 </resources>
